/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package requestpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/requestpb";

message Request {
  string client_id = 1;
  uint64 req_no = 2;
  bytes data = 3;
  bytes authenticator = 4;
}

message RequestRef {
  string client_id = 1;
  uint64 req_no = 2;
  bytes digest = 3;
}

message Batch {
  repeated RequestRef requests = 1;
}
